Test runtime/exceptionMsgs/NoClassDefFoundError/NoClassDefFoundErrorTest.java fails after JDK-8338257

XMLWordPrintable

    • 24
    • b14

      Test JNI_FindClass() with giant name
      FATAL ERROR in native method: JNI class name is not a valid UTF8 string "
      at NoClassDefFoundErrorTest.tryCallFindClass(Native Method)
      at NoClassDefFoundErrorTest.main(NoClassDefFoundErrorTest.java:118)
      at java.lang.invoke.LambdaForm$DMH/0x0000000f01002000.invokeStatic(java.base@24-ea/LambdaForm$DMH)
      at java.lang.invoke.LambdaForm$MH/0x0000000f01003400.invoke(java.base@24-ea/LambdaForm$MH)
      at java.lang.invoke.Invokers$Holder.invokeExact_MT(java.base@24-ea/Invokers$Holder)
      at jdk.internal.reflect.DirectMethodHandleAccessor.invokeImpl(java.base@24-ea/DirectMethodHandleAccessor.java:154)
      at jdk.internal.reflect.DirectMethodHandleAccessor.invoke(java.base@24-ea/DirectMethodHandleAccessor.java:103)
      at java.lang.reflect.Method.invoke(java.base@24-ea/Method.java:573)
      at com.sun.javatest.regtest.agent.MainWrapper$MainTask.run(MainWrapper.java:138)
      at java.lang.Thread.runWith(java.base@24-ea/Thread.java:1588)
      at java.lang.Thread.run(java.base@24-ea/Thread.java:1575)

            Assignee:
            David Holmes
            Reporter:
            David Holmes
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: